--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="style.css" />
 
     <!-- === Bootstrap Links === -->
-    <!-- == node modules == -->
+    <!-- node modules -->
     <link
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap-reboot.min.css"
     />
-    <!-- == jsDelivr == -->
+    <!-- jsDelivr -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,9 +23,53 @@
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
-
+    <link rel="icon" href="assets/img/QuizApp_Logo.png" type="img2/x-icon" />
     <title>QuizApp</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img
+              src="assets/img/QuizApp_Logo 1.png"
+              alt="Logo"
+              width="30"
+              height="30"
+              class="d-inline-block align-text-top"
+            />
+            QuizApp
+          </a>
+          <ul class="nav nav-pills">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Active</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <div class="card border-primary" style="width: 18rem">
+        <img src="assets/img/QuizApp_Logo.png" class="card-img-top" alt="..." />
+        <div class="card-body text-center border">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card’s content.
+          </p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </main>
+  </body>
   <script src="script.js"></script>
 </html>
