add total right answer func

--- a/index.html
+++ b/index.html
@@ -63,8 +63,18 @@
     </header>
     <main>
       <div class="card border-primary quiz-card">
-        <img id="quiz-banner" src="assets/img/QuizApp_Logo.png" class="card-img-top" alt="..." />
-        <img id="quiz-image" src="assets/img/trophy.png" alt="Trophäe" style="display: none;">
+        <img
+          id="quiz-banner"
+          src="assets/img/QuizApp_Logo.png"
+          class="card-img-top"
+          alt="..."
+        />
+        <img
+          id="quiz-image"
+          src="assets/img/trophy.png"
+          alt="Trophäe"
+          style="display: none"
+        />
         <div class="card-body text-center border">
           <h5 id="question-title" class="card-title">Frage</h5>
           <div id="question-body">
