--- a/index.html
+++ b/index.html
@@ -44,20 +44,15 @@
             />
             QuizApp
           </a>
-          <ul class="nav nav-pills">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Active</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
+          <button
+            id="start_quiz_btn"
+            onclick="restartGame()"
+            class="btn btn-primary"
+            type="button"
+            disabled
+          >
+            Erneut spielen ↺
+          </button>
         </div>
       </nav>
     </header>
@@ -75,7 +70,22 @@
           alt="Trophäe"
           style="display: none"
         />
+
         <div class="card-body text-center border">
+          <div
+            id="progress-bar"
+            class="progress"
+            role="progressbar"
+            aria-label="Example with label"
+            aria-valuenow="25"
+            aria-valuemin="0"
+            aria-valuemax="100"
+          >
+            <div id="progress-percent" class="progress-bar" style="width: 25%">
+              25%
+            </div>
+          </div>
+
           <h5 id="question-title" class="card-title">Frage</h5>
           <div id="question-body">
             <div class="answer-options">
@@ -123,12 +133,14 @@
         </div>
 
         <div class="card-footer">
-          <span id="footer-info" class="footer-counter">
+          <span class="footer-counter">
+            <p id="footer-info-start">Du hast</p>
             <p id="current-question">1</p>
             von
             <p id="total-questions">4</p>
-            Fragen</span
-          >
+            Fragen
+            <p id="footer-info-end">richtig beantwortet!</p>
+          </span>
           <button
             onclick="nextQuestion()"
             id="next-button"
